added array of cards and randomly sorted the list

--- a/index.html
+++ b/index.html
@@ -8,13 +8,45 @@
 </head>
 <body>
   <div id="holder">
-    <h1><span>Drag Queen Memory Game</span></h1>
-    <div id="gameArea">
+  <h1><span>Drag Queen Memory Game</span></h1>
+  <div id="gameArea">
+    <div class="card">
+        <div class="card-image alyssaEdwards"></div>
+      </div>
+      <div class="card">
+        <div class="card-image adoreDelano"></div>
+      </div>
+      <div class="card">
+        <div class="card-image jigglyCaliente"></div>
+      </div>
       <div class="card">
         <div class="card-image jinxMonsoon"></div>
       </div>
-    </div>
-
+      <div class="card">
+        <div class="card-image jujubee"></div>
+      </div>
+      <div class="card">
+        <div class="card-image kimChi"></div>
+      </div>
+      <div class="card">
+        <div class="card-image missFame"></div>
+      </div>
+      <div class="card">
+        <div class="card-image raja"></div>
+      </div>
+      <div class="card">
+        <div class="card-image raven"></div>
+      </div>
+      <div class="card">
+        <div class="card-image sharronNeedles"></div>
+      </div>
+      <div class="card">
+        <div class="card-image sheaCoulee"></div>
+      </div> 
+      <div class="card">
+        <div class="card-image violetChachki"></div>
+      </div>   
+  </div>
   </div>
 </body>
 <script src="app.js"></script>
