cards are randomly add to gameArea

--- a/index.html
+++ b/index.html
@@ -10,44 +10,14 @@
   <div id="holder">
   <h1><span>Drag Queen Memory Game</span></h1>
   <div id="gameArea">
-    <div class="card">
-        <div class="card-image alyssaEdwards"></div>
-      </div>
-      <div class="card">
-        <div class="card-image adoreDelano"></div>
-      </div>
-      <div class="card">
-        <div class="card-image jigglyCaliente"></div>
-      </div>
-      <div class="card">
-        <div class="card-image jinxMonsoon"></div>
-      </div>
-      <div class="card">
-        <div class="card-image jujubee"></div>
-      </div>
-      <div class="card">
-        <div class="card-image kimChi"></div>
-      </div>
-      <div class="card">
-        <div class="card-image missFame"></div>
-      </div>
-      <div class="card">
-        <div class="card-image raja"></div>
-      </div>
-      <div class="card">
-        <div class="card-image raven"></div>
-      </div>
-      <div class="card">
-        <div class="card-image sharronNeedles"></div>
-      </div>
-      <div class="card">
-        <div class="card-image sheaCoulee"></div>
-      </div> 
-      <div class="card">
-        <div class="card-image violetChachki"></div>
-      </div>   
+    <!--cards are added here via Javasript-->
+  <div class="clearfix"></div>
   </div>
   </div>
 </body>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 <script src="app.js"></script>
 </html>
