images are flipping correct

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <title>Memory Game</title>
 </head>
 <body>
-  <div id="holder">
-  <h1><span>Drag Queen Memory Game</span></h1>
-  <div id="gameArea">
-    <!--cards are added here via Javasript-->
-  <div class="clearfix"></div>
-  </div>
+  <div>
+    <h1><span>Drag Queen Memory Game</span></h1>
+    <div class="center">
+      <div id="gameArea">
+        <!--cards are added here via Javasript-->
+      <div class="clearfix"></div>
+      </div>
+    </div>
   </div>
 </body>
 <script
